<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--<PreferenceCategory android:title="通用">
        <SwitchPreference
            android:defaultValue="true"
            android:key="example_switch"
            android:summary="建议基于你的消息历史"
            android:title="开启反馈" />

        &lt;!&ndash; NOTE: EditTextPreference accepts EditText attributes. &ndash;&gt;
        &lt;!&ndash; NOTE: EditTextPreference's summary should be set to its value by the activity code. &ndash;&gt;
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="默认值"
            android:inputType="text"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="显示名字" />

        &lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. &ndash;&gt;
        &lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:key="example_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="添加一个朋友到信息" />

    </PreferenceCategory>-->

    <PreferenceCategory android:title="@string/notify">

        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_title_new_message_notifications" />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <!--<RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_ringtone" />-->

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_vibrate"
            android:title="@string/pref_vibrate" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_about">

        <Preference
            android:key="version"
            android:title="@string/pref_versionInfo" />
        <Preference android:title="检查更新" />

    </PreferenceCategory>

</PreferenceScreen>
